# stock-predictor-lstm

./: .commit_msg  .env.example  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yml
.github/workflows/: ci.yml  main.yml
backend/: .coverage  Dockerfile  api.py  config.py  data_pipeline.py  model.py  news_aggregator.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/tests/: conftest.py  test_api.py  test_data_pipeline.py  test_model.py  test_news_aggregator.py
frontend/: Dockerfile  app.js  index.html  package-lock.json  package.json  styles.css  vite.config.js
frontend/src/: App.integration.test.jsx  App.jsx  styles.css
frontend/src/components/: ForecastChartActions.jsx  ForecastTypeToggle.jsx  HeroSection.jsx  LazyLineChart.jsx  LoadingIndicator.jsx  MetricsCard.jsx  Navbar.jsx  PredictionHistory.jsx  SearchCard.jsx  SplashScreen.jsx  StatsBar.jsx  StockChart.jsx  StockInfoGrid.jsx  ToastContainer.jsx  Watchlist.jsx
frontend/src/test/: setup.js
frontend/src/utils/: exportService.js
